# ai-open-lab

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  good_first_issue.md
.github/workflows/: ci.yml
docs/: LEARNING_PATH.md  PROJECTS.md  ROADMAP.md
examples/: prompt_cases.jsonl
examples/knowledge_base/: agent-safety.md  prompt-evaluation.md  rag-basics.md
src/ai_open_lab/: __init__.py  cli.py  prompt_eval.py  rag.py  safety.py
tests/: test_cli.py  test_prompt_eval.py  test_rag.py  test_safety.py
