[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-open-lab"
version = "0.1.0"
description = "Local-first open-source AI utilities for prompt evaluation, mini RAG search, and agent safety scanning."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "AI Open Lab Contributors"}
]
keywords = ["ai", "rag", "prompt-engineering", "evaluation", "agent-safety"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Testing",
  "Topic :: Text Processing :: Indexing"
]
dependencies = []

[project.scripts]
ai-open-lab = "ai_open_lab.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
